Trying to reduce even more GC usage on EMI and getting those numbers lower